fix text alignment

--- a/contador/assets/styles.css
+++ b/contador/assets/styles.css
@@ -25,6 +25,12 @@ button {
 
 h1{
   font-size: 2rem;
+  text-align: center;
+}
+
+p{
+  font-size: 1rem;
+  text-align: center;
 }
 
 #content {
@@ -37,7 +43,6 @@ h1{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-size: 1rem;
 }
 
 #counter {
